--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
 
 </head>
 <body>
-  
+
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
@@ -74,7 +74,7 @@
     <footer>
         <hr>
         <p>
-            © Etherparty.io 2017 | <a href="http://github.com/etherparty/explorer">Fork me on GitHub</a>
+            © Etherparty.io 2017 | <a href="http://github.com/wabei/explorer">Fork me on GitHub</a>
         </p>
     </footer>
 </div>
